# AMS02

./: .gitignore  README.md
electron_analysis/: .MyAnalysis.cbk.swk  .MyAnalysis.cbk.swl  .MyAnalysis.cbk.swm  .MyAnalysis.cbk.swn  .MyAnalysis.cbk.swo  .gitignore  CMakeLists.txt  ElectronAnalysis.cbk  ElectronAnalysis.cbk.save  Energybin.txt  MyElectronAnalysis.cbk  README  rootlogon.C  submission.sh  treewriter.cbk
electron_analysis/Auxiliary/: Doxyfile.in  doxygen.cmake
electron_analysis/Configuration/: ExampleAnalysisTreeReader.cfg  ExampleAnalysisTreeWriter.cfg  LeptonAnalysisGeometry.cfg  LeptonAnalysisSelectionCuts.yaml  LeptonTreeWriterCuts.cfg  PhotonTreeWriter.cfg  analysis-job-settings.cfg
electron_analysis/Libraries/: CMakeLists.txt
electron_analysis/Libraries/ExampleAnalysisTree/: CMakeLists.txt  ExampleAnalysisTree.C  ExampleAnalysisTree.hh
electron_analysis/Libraries/LeptonAnalysisTools/: AnalysisSettings.C  AnalysisSettings.hh  CMakeLists.txt  Clamping.hh  EcalChiSquareLateralCalibration.C  EcalChiSquareLateralCalibration.hh  EffectiveMeasuringTime.C  EffectiveMeasuringTime.hh  ElectronAndPositronFluxModel.C  ElectronAndPositronFluxModel.hh  LeptonAnalysisTree.C  LeptonAnalysisTree.hh  LeptonTreePreselection.C  LeptonTreePreselection.hh  MeasuringTimeParameterization.C  (+3 more)
electron_analysis/Macros/: CMakeLists.txt  test.C
electron_analysis/Programs/: CMakeLists.txt
electron_analysis/RootFiles/: ConvertEdependentCuts.py  Lateral_Shower_CutValue.root  LeptonAnalysis_EcalChiSquareLateralNormalizedCalibration.root
electron_analysis/Scripts/: CCMVABDT_TemplateFit.py  CCMVABDT_template_histograms.py  EffCheck.py  EffCheck_ISS.py  EffCheck_MC.py  Efficiency_ISS.py  Efficiency_MC.py  ElectronAnalysisTools.py  ElectronMCmomentum.py  ElectronMCmomentumPass8.py  Electron_template_fit_parameterization.py  HeRejection_hist.py  He_1Dhist_plot.py  LateralShower.py  LeptonAnalysis_EnergyDependantCuts.root  MCmomentum.py  MeasuringTimeComparission.py  Pass8Plots.py  PositronFlux.py  TRD_CCMVA_fit_test.py  TestSelection.py  TrdEstimatorHist.py  acceptance_comparison.py  chargeconfusion_probability.py  convert.py  parammaking.py  thisanalysis.sh  unload_thisanalysis.sh  untitled1.py  untitled3.py
electron_analysis/jobs/: slurmjob_00000.sh
electron_analysis/sandbox/: environment.sh
photon_analysis/photonframework/: .gitignore  CMakeLists.txt  README.md
(+262 files in other folders)
